moved building to basic builder, also exclude existing .phar files and vcs directories

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.5.0",
         "knight23/core": "dev-master",
         "herrera-io/box": "~1.6.1",
-        "padraic/phar-updater": "~1.0"
+        "padraic/phar-updater": "~1.0",
+        "symfony/finder": "~2.7.0"
     },
 
     "require-dev": {
